tests/typing/errors/quantifier_free/test.expected
File "tests/typing/errors/quantifier_free/test.smt2", line 4, character 8-32:
4 | (assert (forall ((x foo)) (p x)))
            ^^^^^^^^^^^^^^^^^^^^^^^^
Error Quantified expressions are forbidden by the logic.
